# refinery

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.md  Refinery.toml  deny.toml  example_config.toml
.cargo/: config.toml
.circleci/: config.yml
.github/workflows/: cargo-publish.yaml  ci.yml  publishing.yml  releases.yml  stale.yml
examples/: Cargo.toml  main.rs
examples/embedded/: main.rs
examples/embeded/: main.rs
examples/embeded/migrations/: V2__add_cars_table.sql
examples/migrations/: 20250503_000000_add_brand_to_cars_table.rs  V3__add_brand_to_cars_table.rs  V4__insert_entries_to_cars.sql
examples/migrations/20250501_000000_initial/: down.sql
examples/migrations/20250502_000000_add_cars_table/: down.rs
examples/modules/: main.rs
examples/modules/migrations/: V2__add_cars_table.rs  mod.rs
examples/postgres_docker_sql/: Cargo.toml  Dockerfile  docker-compose.yml
examples/postgres_docker_sql/src/: main.rs
examples/postgres_sql/: Cargo.toml
examples/postgres_sql/migrations/: V1__init.sql
examples/postgres_sql/src/: main.rs
examples/rusqlite/: Cargo.toml
examples/src/: main.rs
refinery/: Cargo.toml  README.md
refinery/examples/embeded/migrations/: V1__initial.sql
refinery/examples/modules/: main.rs
refinery/examples/modules/migrations/: V1__initial.rs  V3__add_brand_to_cars_table.rs
refinery/src/: config.rs  lib.rs  runner.rs
refinery/src/drivers/: postgres.rs  postgres_previous.rs  tokio_postgres.rs
refinery/src/traits/: async.rs  mod.rs  sync.rs
refinery/tests/: clickhouse.rs  duckdb.rs  duckdb_refinery.toml  libsql.rs  mysql.rs  mysql_async.rs  mysql_refinery.toml  postgres.rs  postgres_previous.rs  postgres_refinery.toml  rusqlite.rs  sqlite_refinery.toml  surreal.rs  tiberius.rs  tiberius_refinery.toml  tokio_postgres.rs  turso.rs  turso_refinery.toml
refinery/tests/migrations/: 20250501_000000_initial.rs  20250503_000000_add_brand_to_cars_table.rs  20250504_000000_add_year_to_motos_table.rs  V2__add_cars_table.rs  V3__add_brand_to_cars_table.sql  V4__add_year_to_motos_table.rs
refinery/tests/migrations/20250502_000000_add_cars_table/: down.sql  up.sql
refinery/tests/migrations/20250505_000000_add_year_field_to_cars/: down.sql  up.sql
refinery/tests/migrations/V1-2/: V1__initial.rs
refinery/tests/migrations_broken/: 20250503_000000_add_brand_to_cars_table.rs  V3__add_brand_to_cars_table.sql
refinery/tests/migrations_broken/20250502_000000_add_cars_table/: up.rs
refinery/tests/migrations_clickhouse/: V4__add_year_to_motos_table.sql
refinery/tests/migrations_clickhouse/V1-2/: V1__initial.sql  V2__add_cars_and_motos_table.sql
refinery/tests/migrations_clickhouse/V3/: V3__add_brand_to_cars_table.sql
refinery/tests/migrations_int8/: U20240504090322__add_brand_to_cars_table.sql
refinery/tests/migrations_missing/20250501_000000_create_cars_table/: down.sql  up.sql
refinery/tests/migrations_missing_clickhouse/: V2__add_cars_table.sql
refinery/tests/migrations_surreal/: V1__initial.rs  V2__add_email.surql
refinery/tests/mod_migrations/: Cargo.toml  V3__add_brand_to_cars_table.rs  mod.rs
refinery/tests/mod_migrations/src/: lib.rs
refinery/tests/mod_migrations/src/migrations/: V1__initial.rs  V2__add_cars_table.rs  V3__add_brand_to_cars_table.rs  V4__add_year_to_motos_table.rs  mod.rs
refinery/tests/sql_migrations/: V2__add_cars_table.sql  V4__add_year_to_motos_table.sql
refinery/tests/sql_migrations/V1-2/: V1__initial.sql
refinery/tests/sql_migrations/V3-4/: V4__add_year_to_motos_table.sql
refinery/tests/sql_migrations_unversioned/: U0__merge_out_of_order.sql
refinery_cli/: Cargo.toml  README.md
refinery_cli/src/: cli.rs  config.rs  generate.rs  main.rs  migrate.rs  rollback.rs  setup.rs  util.rs
refinery_cli/tests/: cli.rs
refinery_core/: Cargo.toml  README.md
refinery_core/src/: config.rs  error.rs  lib.rs  migration.rs  runner.rs  util.rs
refinery_core/src/drivers/: clickhouse.rs  config.rs  ducdb.rs  libsql.rs  mod.rs  mysql.rs  mysql_async.rs  postgres.rs  rusqlite.rs  sqlx_postgres.rs  surrealdb.rs  tiberius.rs  tokio_postgres.rs  turso.rs
refinery_core/src/executor/: async_exec.rs  exec.rs  mod.rs
refinery_core/src/traits/: async.rs  mod.rs  sync.rs
refinery_derives/: Cargo.toml
refinery_derives/src/: lib.rs
refinery_macros/: Cargo.toml
refinery_macros/src/: lib.rs  util.rs
refinery_migrations/: Cargo.toml
refinery_migrations/src/: async_traits.rs  config.rs  error.rs  lib.rs  mysql.rs  postgres.rs  rusqlite.rs  tokio_postgres.rs  traits.rs  utils.rs
refinery_migrations/src/drivers/: mod.rs  mysql.rs  mysql_async.rs  postgres.rs  postgres_previous.rs  rusqlite.rs  tokio_postgres.rs
refinery_migrations/src/traits/: async.rs  mod.rs  sync.rs
