[package]
name = "refinery_cli"
version = "0.8.11"
authors = ["Katharina Fey <kookie@spacekookie.de>", "João Oliveira <hello@jxs.pt>"]
license = "MIT OR Apache-2.0"
description = "Provides the CLI for the Refinery crate"
documentation = "https://docs.rs/refinery/"
repository = "https://github.com/rust-db/refinery"
readme = "README.md"
keywords = ["refinery", "migrations", "cli"]
edition = "2018"

[[bin]]
name = "refinery"
path = "src/main.rs"

[features]
default = ["mysql", "postgresql", "sqlite-bundled", "mssql"]
postgresql = ["refinery-core/postgres"]
mysql = ["refinery-core/mysql"]
sqlite = ["refinery-core/rusqlite"]
sqlite-bundled = ["sqlite", "refinery-core/rusqlite-bundled"]
mssql = ["refinery-core/tiberius-config", "tokio"]

[dependencies]
refinery-core = { version = "0.8.11", path = "../refinery_core", default-features = false }
clap = { version = "4", features = ["derive"] }
human-panic = "1.1.3"
toml = "0.8"
env_logger = "0.10"
log = "0.4"
anyhow = "1"
regex = "1"
walkdir = "2.3.1"
cfg-if = "1.0.0"
tokio = { version = "1.0", features = ["full"], optional = true }

[dev-dependencies]
predicates = "3"
assert_cmd = "2"

[package.metadata.deb]
name = "refinery"
maintainer = "João Oliveira <hello@jxs.pt>"
depends = "libssl-dev"
