[package]
name = "refinery-core"
version = "0.8.9"
authors = ["Katharina Fey <kookie@spacekookie.de>", "João Oliveira <hello@jxs.pt>"]
description = "This crate should not be used directly, it is internally related to Refinery"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/refinery/"
repository = "https://github.com/rust-db/refinery"
edition = "2018"

[features]
default = []
rusqlite-bundled = ["rusqlite", "rusqlite/bundled"]
tiberius = ["dep:tiberius", "futures"]
tiberius-config = ["tiberius", "tokio", "tokio-util"]
tokio-postgres = ["dep:tokio-postgres", "tokio"]
mysql_async = ["dep:mysql_async", "tokio"]

[dependencies]
async-trait = "0.1"
cfg-if = "1.0"
lazy_static = "1"
log = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
siphasher = "0.3"
thiserror = "1"
toml = "0.7"
url = "2.0"
walkdir = "2.3.1"

# allow multiple versions of the same dependency if API is similar
rusqlite = { version = ">= 0.23, <= 0.29", optional = true }
postgres = { version = ">=0.17, <= 0.19", optional = true }
tokio-postgres = { version = ">= 0.5, <= 0.7", optional = true }
mysql = { version = ">= 21.0.0, <= 23", optional = true, default-features = false }
mysql_async = { version = ">= 0.28, <= 0.32", optional = true }
tiberius = { version = ">= 0.7, <= 0.12", optional = true, default-features = false }
tokio = { version = "1.0", features = ["full"], optional = true }
futures = { version = "0.3.16", optional = true }
tokio-util = { version = "0.7.7", features = ["compat"], optional = true }
time = { version = "0.3.5", features = ["parsing", "formatting"] }

# Flate2 needs to be included for mysql to work
flate2 = { version = "1.0", default-features = false, features = [ "zlib" ], optional = true}

[dev-dependencies]
barrel = { git = "https://github.com/jxs/barrel", features = ["sqlite3", "pg", "mysql", "mssql"] }
tempfile = "3.1.0"

[package.metadata.docs.rs]
all-features = true
