[package]
name = "refinery-core"
version = "0.8.12"
authors = ["Katharina Fey <kookie@spacekookie.de>", "João Oliveira <hello@jxs.pt>"]
description = "This crate should not be used directly, it is internally related to Refinery"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/refinery/"
repository = "https://github.com/rust-db/refinery"
edition = "2018"

[features]
default = []
rusqlite-bundled = ["rusqlite", "rusqlite/bundled"]
tiberius = ["dep:tiberius", "futures", "tokio", "tokio/net"]
tiberius-config = ["tiberius", "tokio", "tokio-util"]
tokio-postgres = ["dep:tokio-postgres", "tokio", "tokio/rt"]
mysql_async = ["dep:mysql_async"]
serde = ["dep:serde"]
toml = ["serde", "dep:toml"]

[dependencies]
async-trait = "0.1"
cfg-if = "1.0"
log = "0.4"
regex = "1"
siphasher = "1.0"
thiserror = "1"
url = "2.0"
walkdir = "2.3.1"

# allow multiple versions of the same dependency if API is similar
rusqlite = { version = ">= 0.23, <= 0.31", optional = true }
postgres = { version = ">=0.17, <= 0.19", optional = true }
tokio-postgres = { version = ">= 0.5, <= 0.7", optional = true }
mysql = { version = ">= 21.0.0, <= 24", optional = true, default-features = false, features = ["minimal"] }
mysql_async = { version = ">= 0.28, <= 0.33", optional = true, default-features = false, features = ["minimal"] }
tiberius = { version = ">= 0.7, <= 0.12", optional = true, default-features = false }
tokio = { version = "1.0", optional = true }
futures = { version = "0.3.16", optional = true, features = ["async-await"] }
tokio-util = { version = "0.7.7", features = ["compat"], optional = true }
time = { version = "0.3.5", features = ["parsing", "formatting"] }
serde = { version = "1", features = ["derive"], optional = true }
toml = { version = "0.8.8", optional = true }

[dev-dependencies]
barrel = { git = "https://github.com/jxs/barrel", features = ["sqlite3", "pg", "mysql", "mssql"] }
tempfile = "3.1.0"

[package.metadata.docs.rs]
all-features = true
