[package]
name = "refinery-core"
version = "0.8.14"
authors = ["Katharina Fey <kookie@spacekookie.de>", "João Oliveira <hello@jxs.pt>"]
description = "This crate should not be used directly, it is internally related to Refinery"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/refinery/"
repository = "https://github.com/rust-db/refinery"
edition = "2021"

[features]
default = []
rusqlite-bundled = ["rusqlite", "rusqlite/bundled"]
tiberius = ["dep:tiberius", "futures", "tokio", "tokio/net"]
tiberius-config = ["tiberius", "tokio", "tokio-util", "serde"]
tokio-postgres = ["dep:tokio-postgres", "tokio", "tokio/rt"]
sqlx-postgres = ["dep:sqlx", "futures", "sqlx/postgres", "sqlx/time"]
mysql_async = ["dep:mysql_async"]
serde = ["dep:serde"]
toml = ["serde", "dep:toml"]

[dependencies]
async-trait = "0.1"
cfg-if = "1.0"
log = "0.4"
regex = "1"
siphasher = "1.0"
thiserror = "1"
url = "2.0"
walkdir = "2.3.1"

# allow multiple versions of the same dependency if API is similar
rusqlite = { version = ">= 0.23, <= 0.31", optional = true }
postgres = { version = ">=0.17, <= 0.19", optional = true }
tokio-postgres = { version = ">= 0.5, <= 0.7", optional = true }
mysql = { version = ">= 21.0.0, <= 25", optional = true, default-features = false, features = ["minimal"] }
mysql_async = { version = ">= 0.28, <= 0.34", optional = true, default-features = false, features = ["minimal"] }
tiberius = { version = ">= 0.7, <= 0.12", optional = true, default-features = false }
tokio = { version = "1.0", optional = true }
futures = { version = "0.3.16", optional = true, features = ["async-await"] }
tokio-util = { version = "0.7.7", features = ["compat"], optional = true }
time = { version = "0.3.5", features = ["parsing", "formatting"] }
serde = { version = "1", features = ["derive"], optional = true }
# Has to be sqlx >= 0.8.0 because this crate transitively depends on
# `libsqlite3-sys` and sqlx brings in an incompatible version of that
# otherwise, even though features say it shouldn't, because of an open
# issue in cargo; see https://github.com/launchbadge/sqlx/issues/3211
sqlx = { version = "0.8", optional = true }
toml = { version = "0.8.8", optional = true }

[dev-dependencies]
barrel = { git = "https://github.com/jxs/barrel", features = ["sqlite3", "pg", "mysql", "mssql"] }
tempfile = "3.1.0"

[package.metadata.docs.rs]
all-features = true
