[package]
name = "refinery-macros"
version = "0.8.11"
authors = ["Katharina Fey <kookie@spacekookie.de>", "João Oliveira <hello@jxs.pt>"]
description = "This crate should not be used directly, it is internally related to Refinery"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/refinery/"
repository = "https://github.com/rust-db/refinery"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
refinery-core = { version = "0.8.11", path = "../refinery_core" }
quote = "1"
syn = "2"
proc-macro2 = "1"
regex = "1"

[dev-dependencies]
tempfile = "3"
