[package]
name = "refinery-macros"
version = "0.8.16"
authors = [
    "Katharina Fey <kookie@spacekookie.de>",
    "João Oliveira <hello@jxs.pt>",
]
description = "This crate should not be used directly, it is internally related to Refinery"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/refinery/"
repository = "https://github.com/rust-db/refinery"
edition = "2024"

[features]
enums = []

[lib]
proc-macro = true

[dependencies]
refinery-core = { version = "0.8.16", path = "../refinery_core" }
quote = "1"
syn = "2"
proc-macro2 = "1"
regex = "1"
heck = "0.5"
itertools = "0.14.0"

[dev-dependencies]
tempfile = "3"
