[package]
name = "refinery-migrations"
version = "0.1.0"
authors = ["Katharina Fey <kookie@spacekookie.de>", "João Oliveira <hello@jxs.pt>"]
description = "This crate should not be used directly, it is internaly related to Refinery"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/refinery/"
repository = "https://github.com/rust-db/refinery"
edition = "2018"

[dependencies]
lazy_static = "1.3.0"
regex = "1.1.6"
log = "0.4.6"
rusqlite = {version = "0.18", optional = true}
postgres = {version = "0.15", optional = true}
mysql = {version = "16.0.2", optional = true}
chrono = "0.4.6"
walkdir = "2.2.7"
serde = { version = "1.0", features = ["derive"] }
cfg-if = "0.1.9"
thiserror = "1.0.6"

[dev-dependencies]
tempdir = "0.3.7"
