[package]
name = "refinery-migrations"
version = "0.2.0"
authors = ["Katharina Fey <kookie@spacekookie.de>", "João Oliveira <hello@jxs.pt>"]
description = "This crate should not be used directly, it is internaly related to Refinery"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/refinery/"
repository = "https://github.com/rust-db/refinery"
edition = "2018"

[features]
sync = []
async = []
rusqlite-bundled = ["rusqlite", "rusqlite/bundled"]

[dependencies]
lazy_static = "1.3"
regex = "1.1"
log = "0.4"
rusqlite = {version = "0.21", optional = true}
postgres = {version = "0.17", optional = true}
postgres-previous = { package = "postgres", version = "0.15", optional = true}
mysql = {version = "16.0", optional = true}
chrono = "0.4"
walkdir = "2.2"
serde = { version = "1.0", features = ["derive"] }
cfg-if = "0.1.10"
thiserror = "1.0"
async-trait = "0.1"
tokio-postgres = { version = "0.5.0", optional = true }
toml = "0.5.5"
mysql_async = { version = "0.21.1", optional = true }
tokio = { version = "0.2", features = ["full"], optional = true }

[dev-dependencies]
tempfile = "3.1.0"
